# thesis

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md
code/: CMakeLists.txt
doc/: EGL Overview - The Khronos Group Inc.html  HTML Canvas 2D Context.html  OpenGL ES Overview - The Khronos Group Inc.html  README.md  std__map - cppreference.com.html
doc/EGL Overview - The Khronos Group Inc_files/: app.css  default+en.I.js  f.txt  js  jsapi
doc/OpenGL ES Overview - The Khronos Group Inc_files/: async-ads.js  cse.js  default+en.I.js  js  jsapi
doc/std__map - cppreference.com_files/: CKYITK7M.json  load(1).php  load(2).php  load(3).php  load(4).php  load(5).php  load(6).php  load(7).php  load.php
paper/: CMakeLists.txt  PLAN  plan.tex
paper/examples/: CMakeLists.txt
paper/examples/erdely/: CMakeLists.txt  erdely.cpp
paper/examples/triangle/: CMakeLists.txt  triangle.cpp  triangle.js
paper/src/: CMakeLists.txt  kotestabla.tex  ledanszilard.tex  szakdolgozat.tex  trash.tex
paper/src/bib/: cites.bib
paper/src/img/: dataflow_canvas_api_eps.eps  dataflow_eps.eps  dataflow_path_api_eps.eps  w3c_erdely_eps.eps
paper/src/res/: ssim-psnr.txt  ssim.txt  tiger.html
paper/src/svg/: beziers.ggb  circle.ggb  sunmoon.ggb  sunmoontrapezoids.ggb  sunmoonvertex.ggb
scripts/: arg-parser.sh  build-resources.sh  build.sh  compare-images.sh  compile.sh  convert-grayscale.sh  convert-pages.sh  fetch-code.sh  gepard-fetch.sh  install-deps.sh  svg-to-eps.sh  update-deps.sh
